# gdscript_to_docs

./: .coveragerc  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
gdscript_to_docs/: __init__.py  cli.py  core.py  regexes.py  utils.py
tests/: test_end_to_end.py
